--- a/Dina/app/src/main/res/layout/activity_creditos.xml
+++ b/Dina/app/src/main/res/layout/activity_creditos.xml
@@ -71,7 +71,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="252dp"
+            android:layout_height="235dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -95,8 +95,8 @@
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@color/azulPrimario"
             android:text="©DINA\n2023"
             android:textAlignment="center"
