--- a/Dina/app/src/main/res/layout/activity_actividad6.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad6.xml
@@ -114,9 +114,10 @@
 
         <TextView
             android:id="@+id/tvAciertos"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:background="@drawable/cuadro_texto"
             android:gravity="center"
             android:textColor="@color/black"
