--- a/Dina/app/src/main/res/layout/activity_actividad7.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad7.xml
@@ -36,7 +36,7 @@
                 android:layout_width="127dp"
                 android:layout_height="237dp"
                 android:layout_marginRight="10dp"
-                app:srcCompat="@drawable/dina" />
+                app:srcCompat="@drawable/dina_sin_fondo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
