--- a/Dina/app/src/main/res/layout/activity_actividad4.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad4.xml
@@ -27,7 +27,7 @@
             android:hint="erantzuna"
             android:inputType="textPersonName"
             android:textAlignment="center"
-            android:textColor="@color/grisbonito"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <LinearLayout
@@ -44,7 +44,7 @@
                 android:background="@drawable/cuadro_texto"
                 android:gravity="center"
                 android:text="Horizontalean"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn1"
@@ -54,7 +54,7 @@
                 android:layout_weight="1"
 
                 android:text="1"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn6"
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="6"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
         </LinearLayout>
 
         <TextView
@@ -91,7 +91,7 @@
                 android:background="@drawable/cuadro_texto"
                 android:gravity="center"
                 android:text="Bertikalean"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn2"
@@ -100,7 +100,7 @@
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="2"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn3"
@@ -109,7 +109,7 @@
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="3"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn4"
@@ -118,7 +118,7 @@
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="4"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btn5"
@@ -127,7 +127,7 @@
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="5"
-                android:textColor="@color/grisbonito" />
+                android:textColor="@color/black" />
         </LinearLayout>
 
         <TextView
