--- a/Dina/app/src/main/res/layout/activity_actividad5.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad5.xml
@@ -48,6 +48,7 @@
             android:layout_height="100dp"
             android:layout_gravity="top"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/cuadro_texto"
             android:orientation="vertical">
 
@@ -85,20 +86,11 @@
             <!--                android:textSize="20sp" />-->
         </LinearLayout>
 
-        <View
-            android:id="@+id/view13"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginVertical="5dp"
-            android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            tools:layout_editor_absoluteX="87dp" />
-
         <LinearLayout
             android:layout_width="160dp"
             android:layout_height="100dp"
             android:layout_gravity="top"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/cuadro_texto"
             android:orientation="vertical">
@@ -139,6 +131,7 @@
             <!--                android:textSize="20sp" />-->
 
         </LinearLayout>
+
     </LinearLayout>
 
 
