--- a/Dina/app/src/main/res/layout/activity_explicacion_act5.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act5.xml
@@ -81,7 +81,11 @@
                         android:id="@+id/texto"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginRight="7dp"
                         android:gravity="left"
+                        android:padding="4sp"
                         android:text="@{itemData.notification.message}"
                         android:textColor="@android:color/black"
                         android:textSize="12sp" />
