Corrección en textos de explicación

--- a/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
@@ -71,6 +71,8 @@
                     android:layout_height="128dp"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/cuadro_texto"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/iv_myra_notification"
                     app:layout_constraintRight_toLeftOf="@+id/iv_one_way"
@@ -79,13 +81,13 @@
                     <TextView
                         android:id="@+id/texto"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="120dp"
                         android:layout_gravity="center|top"
                         android:layout_marginLeft="7dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="7dp"
                         android:gravity="left"
-                        android:padding="4sp"
+                        android:padding="4dp"
                         android:text="@{itemData.notification.message}"
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
