--- a/Dina/app/src/main/res/layout/activity_explicacion_act5.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act5.xml
@@ -72,6 +72,8 @@
                     android:layout_width="230dp"
                     android:layout_height="128dp"
                     android:background="@drawable/cuadro_texto"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/iv_myra_notification"
                     app:layout_constraintRight_toLeftOf="@+id/iv_one_way"
