--- a/Dina/app/src/main/res/values/themes.xml
+++ b/Dina/app/src/main/res/values/themes.xml
@@ -1,30 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Dina" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Dina.Main" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/azulPrimario</item>
         <item name="colorPrimaryVariant">@color/azulSecundario</item>
         <item name="colorOnPrimary">@color/blanco</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/azulPrimario</item>
+        <item name="colorSecondaryVariant">@color/azulSecundario</item>
+        <item name="colorOnSecondary">@color/blanco</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme.Dina.Main" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/azulPrimario</item>
-        <item name="colorPrimaryVariant">@color/azulSecundario</item>
-        <item name="colorOnPrimary">@color/blanco</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
